Fixed check for errors button missing padding

--- a/skin/edit.css
+++ b/skin/edit.css
@@ -31,4 +31,5 @@
 .devtools-toolbarbutton {
 	border-radius: 2px !important;
 	border: 1px solid rgba(0,0,0,0.3) !important;
+	padding: 1px 5px !important;
 }
